--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workspace-root",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "private": true,
   "description": "Workspace root for embroider-toolbox",
   "repository": {
@@ -15,7 +15,7 @@
     "lint": "pnpm --filter \"*\" lint",
     "lint:fix": "pnpm --filter \"*\" lint:fix",
     "prepare": "pnpm build",
-    "release:changelog": "changeset version; update-workspace-root-version",
+    "release:prepare": "changeset version; update-workspace-root-version",
     "release:publish": "pnpm build && changeset publish",
     "test": "pnpm --filter \"*\" test"
   },
