--- a/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/prettier/package.json
@@ -10,12 +10,7 @@
     "lint:js:fix": "prettier --write \"**/*.js\""
   },
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./index.mjs",
-      "require": "./index.cjs"
-    }
-  },
+  "main": "./index.mjs",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
@@ -27,10 +22,10 @@
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.3"
   },
   "peerDependencies": {
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.3"
   },
   "peerDependenciesMeta": {
     "prettier": {
