--- a/packages/create-v2-addon-repo/src/blueprints/configs/stylelint/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/configs/stylelint/package.json
@@ -4,16 +4,7 @@
   "private": true,
   "description": "Configuration for stylelint",
   "type": "module",
-  "exports": {
-    ".": {
-      "import": "./default/index.mjs",
-      "require": "./default/index.cjs"
-    },
-    "./css-modules": {
-      "import": "./css-modules/index.mjs",
-      "require": "./css-modules/index.cjs"
-    }
-  },
+  "main": "./index.mjs",
   "scripts": {
     "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
     "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
@@ -26,11 +17,11 @@
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
     "concurrently": "^9.1.2",
-    "prettier": "^3.5.2"
+    "prettier": "^3.5.3"
   },
   "peerDependencies": {
-    "prettier": "^3.5.2",
-    "stylelint": "^16.14.1"
+    "prettier": "^3.5.3",
+    "stylelint": "^16.15.0"
   },
   "peerDependenciesMeta": {
     "prettier": {
