--- a/configs/ember-template-lint/package.json
+++ b/configs/ember-template-lint/package.json
@@ -11,17 +11,14 @@
   "type": "module",
   "main": "index.cjs",
   "scripts": {
-    "lint": "concurrently \"pnpm:lint:*(!fix)\" --names \"lint:\"",
-    "lint:fix": "concurrently \"pnpm:lint:*:fix\" --names \"fix:\"",
-    "lint:js": "prettier \"**/*.{cjs,mjs}\" --check",
-    "lint:js:fix": "prettier \"**/*.{cjs,mjs}\" --write"
+    "lint": "prettier \"**/*.{cjs,mjs}\" --cache --check",
+    "lint:fix": "prettier \"**/*.{cjs,mjs}\" --cache --write"
   },
   "dependencies": {
-    "@ijlee2-frontend-configs/ember-template-lint": "^1.1.0"
+    "@ijlee2-frontend-configs/ember-template-lint": "^2.0.0"
   },
   "devDependencies": {
     "@shared-configs/prettier": "workspace:*",
-    "concurrently": "^9.1.2",
     "prettier": "^3.5.3"
   },
   "peerDependencies": {
