--- a/packages/create-v2-addon-repo/src/blueprints/package.json
+++ b/packages/create-v2-addon-repo/src/blueprints/package.json
@@ -7,8 +7,8 @@
     "addon": "blueprints-v2-addon",
     "build": "pnpm --filter blueprints-v2-addon --filter \"./packages/**\" build",
     "format": "pnpm --filter \"*\" format",
-    "lint": "pnpm --filter \"*\" lint",
-    "lint:fix": "pnpm --filter \"*\" lint:fix",
+    "lint": "pnpm --filter \"*\" lint && pnpm lint:package-json",
+    "lint:fix": "pnpm --filter \"*\" lint:fix && pnpm lint:package-json:fix",
     "lint:package-json": "pnpm lint:package-json:fix --check",
     "lint:package-json:fix": "sort-package-json \"**/package.json\" --ignore \"**/{blueprints,dist,dist-for-testing,node_modules,tests,tmp}/**\"",
     "start": "concurrently \"pnpm:start:*\" --names \"start:\" --prefix-colors cyan,yellow",
